# plumai

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: deploy.yml
plumai/: app.py  plumai.py
plumai/models/: flux1_dev.py  flux1_schnell.py
plumai/templates/: index.html
