[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plumai"
version = "0.1.12"
authors = [
    {name = "Tam Nguyen", email = "tamnvhustcc@gmail.com"},
]
description = "A tool for deploying and running AI models to Modal"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Flask>=2.0.0,<=3.0.3",
    "modal>=0.64.0,<=0.64.16",
    "requests>2.9.0",
    "colorama>0.4.0"
]

[project.urls]
Homepage = "https://x.com/tamnvvn"

[project.scripts]
plumai = "plumai.plumai:main"

[tool.setuptools.packages.find]
include = ["plumai", "plumai.*"]

[tool.setuptools.package-data]
"*" = ["templates/*"]